# pytoolkit-rustlike

./: CLAUDE.md  README.md  pyproject.toml
pytoolkit_result/: __init__.py  result.py
pytoolkit_rustlike/: __init__.py  __init__.pyi  exceptions.py  option.py  option.pyi  result.py
tests/: test_exceptions.py  test_option.py  test_result.py
typings/pytoolkit_rustlike/: __init__.pyi  exceptions.pyi  option.pyi  result.pyi
