[project]
name = "pytoolkit-result"
version = "v2025.07.12"
description = "Rust-inspired Result type for Python with type safety and functional programming features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.403", "pytest>=8.4.1", "ruff>=0.12.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytoolkit_result"]

[tool.ruff]
target-version = "py313"

[tool.pyright]
include = ["pytoolkit_result", "tests"]
typeCheckingMode = "strict"
