[project]
name = "pytoolkit-rustlike"
version = "v2025.07.13.02"
description = "Rust-inspired Result and Option types for Python with type safety and functional programming features"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = ["pyright>=1.1.403", "pytest>=8.4.1", "ruff>=0.12.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pytoolkit_rustlike"]

[tool.ruff]
target-version = "py313"

[tool.pyright]
include = ["pytoolkit_rustlike", "tests"]
typeCheckingMode = "strict"
